修复了客户端创建与反射安全、文件路径、SSO/SAP/微信认证、配置解码、邮件可靠性及 OpenAI 参数校验问题