@@ -3,6 +3,8 @@ package org.colorcoding.ibas.thirdpartyapp.client;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
+import java.io.IOException;
+import java.lang.reflect.Modifier;
 
 import org.colorcoding.ibas.bobas.common.Criteria;
 import org.colorcoding.ibas.bobas.common.Files;
@@ -51,6 +53,16 @@ public class ApplicationClientManager {
 	}
 
 	protected ApplicationClient create(ApplicationSetting appSetting) throws Exception {
+		if (appSetting == null) {
+			throw new IllegalArgumentException(I18N.prop("msg_tpa_no_param", "appSetting"));
+		}
+		if (Strings.isNullOrEmpty(appSetting.getName())) {
+			throw new IllegalArgumentException(I18N.prop("msg_tpa_no_param", "name"));
+		}
+		if (Strings.isNullOrEmpty(appSetting.getGroup())) {
+			throw new IllegalArgumentException(I18N.prop("msg_tpa_no_param", "group"));
+		}
+		String clientPackage = ApplicationClientManager.class.getPackage().getName();
 		String managerName = MyConfiguration
 				.getConfigValue(String.format(CONFIG_ITEM_TEMPLATE_APPLICATION_CLINET, appSetting.getGroup()));
 		if (Strings.isNullOrEmpty(managerName)) {
@@ -58,11 +70,16 @@ public class ApplicationClientManager {
 		}
 		if (managerName.indexOf(".") < 0) {
 			// 补充命名空间
-			managerName = String.format("%s.%s", ApplicationClientManager.class.getName().substring(0,
-					ApplicationClientManager.class.getName().lastIndexOf(".")), managerName);
+			managerName = String.format("%s.%s", clientPackage, managerName);
 		}
-		ApplicationClient client = (ApplicationClient) Class.forName(managerName).getDeclaredConstructor()
-				.newInstance();
+		Class<?> managerClass = Class.forName(managerName, false, ApplicationClientManager.class.getClassLoader());
+		Package managerPackage = managerClass.getPackage();
+		if (managerPackage == null || !clientPackage.equals(managerPackage.getName())
+				|| !ApplicationClient.class.isAssignableFrom(managerClass)
+				|| !Modifier.isPublic(managerClass.getModifiers()) || Modifier.isAbstract(managerClass.getModifiers())) {
+			throw new SecurityException(String.format("invalid application client class [%s].", managerName));
+		}
+		ApplicationClient client = managerClass.asSubclass(ApplicationClient.class).getDeclaredConstructor().newInstance();
 		client.setSetting(appSetting);
 		for (ApplicationSettingItem item : appSetting.getSettingItems()) {
 			if (item.getCategory() == emConfigItemCategory.FILE) {
@@ -73,12 +90,20 @@ public class ApplicationClientManager {
 				if (Strings.startsWith(fileName, ApplicationSettingItem.URL_HEAD_FILE)) {
 					fileName = fileName.substring(ApplicationSettingItem.URL_HEAD_FILE.length());
 				}
+				// 目标文件必须位于本地模块文档目录内
+				File documentsFolder = Files
+						.valueOf(MyConfiguration.getDataFolder(), MyConfiguration.getDocumetsFolder()).getCanonicalFile();
+				File file = new File(documentsFolder, fileName).getCanonicalFile();
+				if (file.equals(documentsFolder) || !file.toPath().startsWith(documentsFolder.toPath())) {
+					throw new IOException(String.format("invalid file path [%s].", item.getValue()));
+				}
 				// 检查本地模块目录是否存在
-				File file = Files.valueOf(MyConfiguration.getDataFolder(), MyConfiguration.getDocumetsFolder(),
-						fileName);
 				if (file.exists() && file.isFile()) {
 					item.setValue(file.getPath());
 					continue;
+				}
+				if (file.exists()) {
+					throw new IOException(String.format("invalid file [%s].", file.getPath()));
 				}
 				// 复制到本地模块目录
 				try (FileRepository fileRepository = new FileRepository()) {
@@ -95,17 +120,18 @@ public class ApplicationClientManager {
 					if (opRsltFile.getResultObjects().isEmpty()) {
 						throw new FileNotFoundException(item.getValue());
 					}
-					for (FileItem fileItem : opRsltFile.getResultObjects()) {
-						if (file.getParentFile().mkdirs()) {
-							try (FileOutputStream outputStream = new FileOutputStream(file)) {
-								fileItem.writeTo(outputStream);
-								outputStream.flush();
-							}
-							item.setValue(file.getPath());
-							Logger.log(MessageLevel.DEBUG, "%s: write file [%s] to [%s].", client.getName(),
-									fileItem.getName(), file.getPath());
-						}
+					FileItem fileItem = opRsltFile.getResultObjects().firstOrDefault();
+					File parent = file.getParentFile();
+					if ((!parent.exists() && !parent.mkdirs()) || !parent.isDirectory()) {
+						throw new IOException(String.format("failed to create directory [%s].", parent.getPath()));
 					}
+					try (FileOutputStream outputStream = new FileOutputStream(file)) {
+						fileItem.writeTo(outputStream);
+						outputStream.flush();
+					}
+					item.setValue(file.getPath());
+					Logger.log(MessageLevel.DEBUG, "%s: write file [%s] to [%s].", client.getName(),
+							fileItem.getName(), file.getPath());
 				}
 			}
 		}
@@ -141,6 +167,10 @@ public class ApplicationClientManager {
 	}
 
 	public ApplicationClient create(IApplication application) {
+		if (application == null || application.getActivated() != emYesNo.YES) {
+			throw new IllegalArgumentException(I18N.prop("msg_tpa_invalid_application",
+					application == null ? Strings.VALUE_EMPTY : application.getCode()));
+		}
 		try (BORepositoryThirdPartyApp boRepository = new BORepositoryThirdPartyApp()) {
 			boRepository.setUserToken(OrganizationFactory.SYSTEM_USER.getToken());
 			return this.create(boRepository.createApplicationSetting(application));
@@ -173,6 +203,10 @@ public class ApplicationClientManager {
 	}
 
 	public ApplicationClient create(IUserMapping userMapping) {
+		if (userMapping == null) {
+			throw new IllegalArgumentException(I18N.prop("msg_tpa_invalid_application_user_mapping",
+					Strings.VALUE_EMPTY, Strings.VALUE_EMPTY));
+		}
 		try (BORepositoryThirdPartyApp boRepository = new BORepositoryThirdPartyApp()) {
 			boRepository.setUserToken(OrganizationFactory.SYSTEM_USER.getToken());
 			return this.create(boRepository.createApplicationSetting(userMapping));
